syntax="proto3";

package hotcat.project;

import "hotcat/common.proto";

option java_multiple_files = false;
option java_package = "com.github.binarybeing.hotcat.proto.project";
option java_outer_classname = "IdeaProjectGrpcService";

service ProjectGrpcService {
    rpc current(BaseRequest) returns (CurrentResponse) {}
}
message CurrentResponse{
    int32 code = 1;
    optional string msg = 2;
    optional Project data = 3;
}
message Project{
    string name = 1;
    string path = 2;
    repeated Module modules = 3;
    CurrentModule currentModule = 4;
}

message CurrentModule{
    Module module = 1;
    optional CurrentFile currentFile = 2;
}

message CurrentFile{
    File file = 1;
    optional bool isFile = 2;
    optional Content content = 3;
}

message Module{
    string name = 1;
    string path = 2;
}
message Directory{
    string name = 1;
    string path = 2;
    repeated Directory directories = 3;
    repeated File files = 4;
}

message File{
    string name = 1;
    string path = 2;
}

message Content{
    string text = 1;
    optional TextSelectModel selectModel = 2;
}

message TextSelectModel{
    optional string text = 1;
    int32 start = 2;
    int32 end = 3;
    int32 line = 4;
}